--- a/Projekt/Dictionaries/Colors.xaml
+++ b/Projekt/Dictionaries/Colors.xaml
@@ -1,93 +1,90 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:system="clr-namespace:System.Security;assembly=mscorlib"
-                    xmlns:local="clr-namespace:Projekt.Dictionaries">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <!--First Color Scheme-->
-    
+
     <!--Dark Violet-->
     <Color x:Key="DarkVioletBackgroundColor">#222233</Color>
-    <SolidColorBrush x:Key="DarkVioletBackgroundColorBrush" Color="{StaticResource DarkVioletBackgroundColor}"/>
+    <SolidColorBrush x:Key="DarkVioletBackgroundColorBrush" Color="{StaticResource DarkVioletBackgroundColor}" />
 
     <Color x:Key="DarkVioletForgroundColor">#AACCFF</Color>
-    <SolidColorBrush x:Key="DarkVioletForgroundColorBrush" Color="{StaticResource DarkVioletForgroundColor}"/>
-  
+    <SolidColorBrush x:Key="DarkVioletForgroundColorBrush" Color="{StaticResource DarkVioletForgroundColor}" />
+
     <!--Dark Pink-->
     <Color x:Key="DarkPinkForgroundColor">#561010</Color>
-    <SolidColorBrush x:Key="DarkPinkForgroundColorBrush" Color="{StaticResource DarkPinkForgroundColor}"/>
+    <SolidColorBrush x:Key="DarkPinkForgroundColorBrush" Color="{StaticResource DarkPinkForgroundColor}" />
 
     <Color x:Key="DarkPinkBackgroundColor">#41162D</Color>
-    <SolidColorBrush x:Key="DarkPinkBackgroundColorBrush" Color="{StaticResource DarkPinkBackgroundColor}"/>
+    <SolidColorBrush x:Key="DarkPinkBackgroundColorBrush" Color="{StaticResource DarkPinkBackgroundColor}" />
 
-<!--Second color scheme-->
-    
+    <!--Second color scheme-->
+
     <!--Beige Color-->
     <Color x:Key="BeigeColor">#d6e5e3</Color>
-    <SolidColorBrush x:Key="BeigeColorBrush" Color="{StaticResource BeigeColor}"/>
-    
+    <SolidColorBrush x:Key="BeigeColorBrush" Color="{StaticResource BeigeColor}" />
+
     <!--Light Gray -->
     <Color x:Key="LightGrayColor">#cacfd6</Color>
-    <SolidColorBrush x:Key="LightGrayColorBrush" Color="{StaticResource LightGrayColor}"/>
+    <SolidColorBrush x:Key="LightGrayColorBrush" Color="{StaticResource LightGrayColor}" />
 
     <!--Middle Blue Green-->
     <Color x:Key="BlueGreenColor">#9fd8cb</Color>
-    <SolidColorBrush x:Key="BlueGreenColorBrush" Color="{StaticResource BlueGreenColor}"/>
+    <SolidColorBrush x:Key="BlueGreenColorBrush" Color="{StaticResource BlueGreenColor}" />
 
     <!--Hooker's Green-->
     <Color x:Key="HookersGreenColor">#517664</Color>
-    <SolidColorBrush x:Key="HookersGreenColorBrush" Color="{StaticResource HookersGreenColor}"/>
+    <SolidColorBrush x:Key="HookersGreenColorBrush" Color="{StaticResource HookersGreenColor}" />
 
     <!--Pullman Green-->
     <Color x:Key="PullmanGreenColor">#2d3319</Color>
-    <SolidColorBrush x:Key="PullmanGreenColorBrush" Color="{StaticResource PullmanGreenColor}"/>
-    
-<!--Third color scheme-->
+    <SolidColorBrush x:Key="PullmanGreenColorBrush" Color="{StaticResource PullmanGreenColor}" />
+
+    <!--Third color scheme-->
     <!--Shadow Blue-->
     <Color x:Key="ShadowBlueColor">#777da7</Color>
-    <SolidColorBrush x:Key="ShadowBlueColorBrush" Color="{StaticResource ShadowBlueColor}"/>
+    <SolidColorBrush x:Key="ShadowBlueColorBrush" Color="{StaticResource ShadowBlueColor}" />
 
     <!--Tea Green-->
     <Color x:Key="TeaGreenColor">#c6ecae</Color>
-    <SolidColorBrush x:Key="TeaGreenColorBrush" Color="{StaticResource TeaGreenColor}"/>
+    <SolidColorBrush x:Key="TeaGreenColorBrush" Color="{StaticResource TeaGreenColor}" />
 
     <!--Eton Blue-->
     <Color x:Key="EtonBlueColor">#94c9a9</Color>
-    <SolidColorBrush x:Key="EtonBlueColorBrush" Color="{StaticResource EtonBlueColor}"/>
+    <SolidColorBrush x:Key="EtonBlueColorBrush" Color="{StaticResource EtonBlueColor}" />
 
     <!--BlueNavyColor-->
     <Color x:Key="BlueNavyColor">#4a5899</Color>
-    <SolidColorBrush x:Key="BlueNavyColorBrush" Color="{StaticResource BlueNavyColor}"/> 
-    
-<!--Forth color scheme-->
+    <SolidColorBrush x:Key="BlueNavyColorBrush" Color="{StaticResource BlueNavyColor}" />
+
+    <!--Forth color scheme-->
     <!--DarkOuterSpace-->
     <Color x:Key="DarkOuterSpaceColor">#454545</Color>
-    <SolidColorBrush x:Key="DarkOuterSpaceColorBrush" Color="{StaticResource DarkOuterSpaceColor}"/> 
-    
-    
+    <SolidColorBrush x:Key="DarkOuterSpaceColorBrush" Color="{StaticResource DarkOuterSpaceColor}" />
+
+
     <!--Material Design Color Scheme-->
     <Color x:Key="Teal500Color">#009688</Color>
-    <SolidColorBrush x:Key="Teal500ColorBrush" Color="{StaticResource Teal500Color}"/>
+    <SolidColorBrush x:Key="Teal500ColorBrush" Color="{StaticResource Teal500Color}" />
 
     <Color x:Key="Teal400Color">#26A69A</Color>
-    <SolidColorBrush x:Key="Teal400ColorBrush" Color="{StaticResource Teal400Color}"/>
-    
+    <SolidColorBrush x:Key="Teal400ColorBrush" Color="{StaticResource Teal400Color}" />
+
     <Color x:Key="Teal300Color">#4DB6AC</Color>
-    <SolidColorBrush x:Key="Teal300ColorBrush" Color="{StaticResource Teal300Color}"/>
+    <SolidColorBrush x:Key="Teal300ColorBrush" Color="{StaticResource Teal300Color}" />
 
     <Color x:Key="Teal200Color">#80CBC4</Color>
-    <SolidColorBrush x:Key="Teal200ColorBrush" Color="{StaticResource Teal200Color}"/>
-    
+    <SolidColorBrush x:Key="Teal200ColorBrush" Color="{StaticResource Teal200Color}" />
+
     <Color x:Key="Teal100Color">#B2DFDB</Color>
-    <SolidColorBrush x:Key="Teal100ColorBrush" Color="{StaticResource Teal100Color}"/>
+    <SolidColorBrush x:Key="Teal100ColorBrush" Color="{StaticResource Teal100Color}" />
 
     <Color x:Key="Teal50Color">#E0F2F1</Color>
-    <SolidColorBrush x:Key="Teal50ColorBrush" Color="{StaticResource Teal50Color}"/>
+    <SolidColorBrush x:Key="Teal50ColorBrush" Color="{StaticResource Teal50Color}" />
 
     <Color x:Key="TealButtonColor">#64FFDA</Color>
-    <SolidColorBrush x:Key="TealButtonColorBrush" Color="{StaticResource TealButtonColor}"/>
+    <SolidColorBrush x:Key="TealButtonColorBrush" Color="{StaticResource TealButtonColor}" />
 
     <Color x:Key="TealButtonColor1">#1DE9B6</Color>
-    <SolidColorBrush x:Key="TealButtonColor1Brush" Color="{StaticResource TealButtonColor1}"/>
+    <SolidColorBrush x:Key="TealButtonColor1Brush" Color="{StaticResource TealButtonColor1}" />
 
 </ResourceDictionary>
-
