--- a/Projekt/Dictionaries/RadioButtons.xaml
+++ b/Projekt/Dictionaries/RadioButtons.xaml
@@ -1,11 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Projekt.Dictionaries">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
 
-
-    <Style x:Key="DefaultRadioButton" TargetType="RadioButton" >
-        <Setter Property="MinWidth" Value="100"/>
+    <Style x:Key="DefaultRadioButton" TargetType="RadioButton">
+        <Setter Property="MinWidth" Value="100" />
 
         <Setter Property="Template">
             <Setter.Value>
@@ -13,19 +11,22 @@
                     <BulletDecorator Background="Transparent" Cursor="Hand">
                         <BulletDecorator.Bullet>
                             <Grid Height="16" Width="16">
-                                <Border Name="RadioOuter" Background="Transparent" BorderBrush="Gainsboro" BorderThickness="2" CornerRadius="2" />
-                                <Border CornerRadius="0" Margin="4" Name="RadioMark" Background="#FFADADAD" Visibility="Hidden" />
+                                <Border Name="RadioOuter" Background="Transparent" BorderBrush="Gainsboro"
+                                        BorderThickness="2" CornerRadius="2" />
+                                <Border CornerRadius="0" Margin="4" Name="RadioMark" Background="#FFADADAD"
+                                        Visibility="Hidden" />
                             </Grid>
                         </BulletDecorator.Bullet>
 
-                        <TextBlock Margin="3,1,0,0" Foreground="{StaticResource DarkVioletForgroundColorBrush}"  FontSize="16">
-                        <ContentPresenter />
+                        <TextBlock Margin="3,1,0,0" Foreground="{StaticResource DarkVioletForgroundColorBrush}"
+                                   FontSize="16">
+                            <ContentPresenter />
                         </TextBlock>
                     </BulletDecorator>
 
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsChecked" Value="true">
-                            <Setter TargetName="RadioMark" Property="Visibility" Value="Visible"/>
+                            <Setter TargetName="RadioMark" Property="Visibility" Value="Visible" />
                             <Setter TargetName="RadioOuter" Property="BorderBrush" Value="#FFADADAD" />
                         </Trigger>
                     </ControlTemplate.Triggers>
