--- a/Projekt/Dictionaries/TextBoxs.xaml
+++ b/Projekt/Dictionaries/TextBoxs.xaml
@@ -1,34 +1,30 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:system="clr-namespace:System.Security.Claims;assembly=mscorlib"
-                    xmlns:local="clr-namespace:Projekt.Dictionaries">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style x:Key="BasicTextBox" TargetType="TextBox">
 
-        <Setter Property="BorderThickness" Value="0 0 0 2"/>
-        <Setter Property="BorderBrush" Value="#AACCFF"/>
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Foreground" Value="{StaticResource DarkVioletForgroundColorBrush}"/>
+        <Setter Property="BorderThickness" Value="0 0 0 2" />
+        <Setter Property="BorderBrush" Value="#AACCFF" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Foreground" Value="{StaticResource DarkVioletForgroundColorBrush}" />
 
 
-        <Setter Property="FontWeight" Value="UltraLight"/>
+        <Setter Property="FontWeight" Value="UltraLight" />
 
-        <Setter Property="HorizontalContentAlignment" Value="Left"/>
-        <Setter Property="VerticalContentAlignment" Value="Bottom"/>
+        <Setter Property="HorizontalContentAlignment" Value="Left" />
+        <Setter Property="VerticalContentAlignment" Value="Bottom" />
 
-        <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Center" />
 
-        <Setter Property="Margin" Value="50"/>
-        <Setter Property="Padding" Value="5"/>
+        <Setter Property="Margin" Value="50" />
+        <Setter Property="Padding" Value="5" />
 
-        <Setter Property="Height" Value="30"/>
-        <Setter Property="Width" Value="200"/>
-
+        <Setter Property="Height" Value="30" />
+        <Setter Property="Width" Value="200" />
 
 
     </Style>
 
-    
 
 </ResourceDictionary>
