--- a/Projekt/Dictionaries/labels.xaml
+++ b/Projekt/Dictionaries/labels.xaml
@@ -1,17 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:system="clr-namespace:System.Security.Claims;assembly=mscorlib"
-                    xmlns:local="clr-namespace:Projekt.Dictionaries">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <!--Default label style-->
     <Style TargetType="Label" x:Key="DefaultLabelStyle">
-        
-        <Setter Property="FontWeight" Value="Light"/>
-        <Setter Property="FontSize" Value="12"/>
-        <Setter Property="Foreground" Value="{StaticResource DarkVioletForgroundColorBrush}"/>
-        
-        <Setter Property="HorizontalAlignment" Value="right"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        
+
+        <Setter Property="FontWeight" Value="Light" />
+        <Setter Property="FontSize" Value="12" />
+        <Setter Property="Foreground" Value="{StaticResource DarkVioletForgroundColorBrush}" />
+
+        <Setter Property="HorizontalAlignment" Value="right" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+
     </Style>
 </ResourceDictionary>
