--- a/Projekt/GUI/SessionItem.xaml
+++ b/Projekt/GUI/SessionItem.xaml
@@ -1,104 +1,100 @@
 ﻿<UserControl x:Class="Projekt.GUI.SessionItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Projekt.GUI"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:design="clr-namespace:Projekt.GUI.Design"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="150" d:DesignWidth="500" Background="{StaticResource Teal400ColorBrush}">
 
-    <Grid d:DataContext="{x:Static design:SessionItemDesign.Instance}" >
+    <Grid d:DataContext="{x:Static design:SessionItemDesign.Instance}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
-        
+
         <!--Informacja o przewidzianym typie-->
         <StackPanel Orientation="Vertical" Grid.Column="0">
-            <Label Foreground="White" 
-                   VerticalAlignment="Top" 
-                   HorizontalAlignment="Center" 
+            <Label Foreground="White"
+                   VerticalAlignment="Top"
+                   HorizontalAlignment="Center"
                    Margin="5"
                    Padding="0"
-                   Style="{StaticResource DefaultLabelStyle}"  
-                   Content="Przewidzany typ:"/>
-            
-                <Border HorizontalAlignment="Center" 
-                        VerticalAlignment="Bottom"  
-                        Width="50" Height="50" 
-                        CornerRadius="20 2 20 2" 
-                        Margin="0 25 0 5" 
-                        Background="{StaticResource Teal200ColorBrush}">
-                    
-                    <Label
-                   Margin="0"
-                   Padding="0"
-                   VerticalContentAlignment="Center"
-                   HorizontalContentAlignment="Left"
-                   Foreground="white"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center" 
-                   FontSize="30"
-                   FontWeight="DemiBold"
-                   Style="{StaticResource DefaultLabelStyle}" 
-                   Content="{Binding PredictedType}"/>
-                    
-                </Border>
-        </StackPanel>
-        
-        <!--Informacja o zadanym typie-->
-        <StackPanel Orientation="Vertical" Grid.Column="1">
-            <Label Foreground="White" 
-                   VerticalAlignment="Top" 
-                   HorizontalAlignment="Left" 
-                   Margin="5"
-                   Padding="0"
-                   Style="{StaticResource DefaultLabelStyle}"  
-                   Content="Zadany typ:"/>
+                   Style="{StaticResource DefaultLabelStyle}"
+                   Content="Przewidzany typ:" />
 
-            <Border HorizontalAlignment="Center" 
-                        VerticalAlignment="Bottom"  
-                        Width="50" Height="50" 
-                        CornerRadius="20 2 20 2" 
-                        Margin="0 25 0 5" 
-                        Background="{StaticResource Teal200ColorBrush}">
+            <Border HorizontalAlignment="Center"
+                    VerticalAlignment="Bottom"
+                    Width="50" Height="50"
+                    CornerRadius="20 2 20 2"
+                    Margin="0 25 0 5"
+                    Background="{StaticResource Teal200ColorBrush}">
 
                 <Label
-                   Margin="0"
+                    Margin="0"
+                    Padding="0"
+                    VerticalContentAlignment="Center"
+                    HorizontalContentAlignment="Left"
+                    Foreground="white"
+                    HorizontalAlignment="Center"
+                    FontSize="30"
+                    FontWeight="DemiBold"
+                    Style="{StaticResource DefaultLabelStyle}"
+                    Content="{Binding PredictedType}" />
+
+            </Border>
+        </StackPanel>
+
+        <!--Informacja o zadanym typie-->
+        <StackPanel Orientation="Vertical" Grid.Column="1">
+            <Label Foreground="White"
+                   VerticalAlignment="Top"
+                   HorizontalAlignment="Left"
+                   Margin="5"
                    Padding="0"
-                   VerticalContentAlignment="Center"
-                   HorizontalContentAlignment="Center"
-                   Foreground="white"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center" 
-                   FontSize="30"
-                   FontWeight="DemiBold"
-                   Style="{StaticResource DefaultLabelStyle}" 
-                   Content="{Binding Type}"/>
+                   Style="{StaticResource DefaultLabelStyle}"
+                   Content="Zadany typ:" />
+
+            <Border HorizontalAlignment="Center"
+                    VerticalAlignment="Bottom"
+                    Width="50" Height="50"
+                    CornerRadius="20 2 20 2"
+                    Margin="0 25 0 5"
+                    Background="{StaticResource Teal200ColorBrush}">
+
+                <Label
+                    Margin="0"
+                    Padding="0"
+                    VerticalContentAlignment="Center"
+                    HorizontalContentAlignment="Center"
+                    Foreground="white"
+                    HorizontalAlignment="Center"
+                    FontSize="30"
+                    FontWeight="DemiBold"
+                    Style="{StaticResource DefaultLabelStyle}"
+                    Content="{Binding RealType}" />
 
             </Border>
         </StackPanel>
 
         <!--Treść sesji-->
         <StackPanel Orientation="Vertical" Grid.Column="2">
-            <Label Style="{StaticResource DefaultLabelStyle}" 
-                   Foreground="White" 
+            <Label Style="{StaticResource DefaultLabelStyle}"
+                   Foreground="White"
                    Content="Zapytania sesji:"
                    HorizontalAlignment="Left"
-                   VerticalAlignment="Center"/>
-            <TextBlock 
+                   />
+            <TextBlock
                 TextWrapping="Wrap"
                 Foreground="White"
-                FontSize="16" 
+                FontSize="16"
                 FontWeight="Normal"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
                 Margin="0 35 0 0"
                 Padding="5"
-                Text="{Binding SessionElements}"
-                />
+                Text="{Binding SessionElements}" />
         </StackPanel>
     </Grid>
 
