--- a/Projekt/GUI/SessionItemList.xaml
+++ b/Projekt/GUI/SessionItemList.xaml
@@ -1,21 +1,21 @@
 ﻿<UserControl x:Class="Projekt.GUI.SessionItemList"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:Projekt.GUI"
              xmlns:design="clr-namespace:Projekt.GUI.Design"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300" Background="White">
 
     <Grid d:DataContext="{x:Static design:SessionItemListDesign.Instance}">
         <ScrollViewer VerticalScrollBarVisibility="Auto">
-            <ItemsControl ItemsSource="{Binding Items}">
+            <ItemsControl ItemsSource="{Binding ItemList}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <local:SessionItem Margin="0.5" Padding="1"/>
+                        <local:SessionItem Margin="0.5" Padding="1" />
                     </DataTemplate>
-                </ItemsControl.ItemTemplate>    
+                </ItemsControl.ItemTemplate>
             </ItemsControl>
         </ScrollViewer>
     </Grid>
