--- a/Projekt/GUI/Windows/InfoWindow.xaml
+++ b/Projekt/GUI/Windows/InfoWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="Projekt.Windows.InfoWindow"
+﻿<Window x:Class="Projekt.InfoWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Projekt.Windows"
+        xmlns:local="clr-namespace:Projekt"
         mc:Ignorable="d"
         Title="" Height="600" Width="800" WindowStartupLocation="CenterOwner" ShowInTaskbar="False">
     <Grid x:Name="LayoutRoot">
-        <ContentPresenter x:Name="MyContentPresenter" Content="{Binding InfoContent}"/>
+        <ContentPresenter x:Name="MyContentPresenter" Content="{Binding InfoContent}" />
     </Grid>
 </Window>
