--- a/Projekt/GUI/UserControls/PlaceHolderControl.xaml
+++ b/Projekt/GUI/UserControls/PlaceHolderControl.xaml
@@ -1,16 +1,16 @@
 ﻿<UserControl x:Class="Projekt.GUI.UserControls.PlaceHolderControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <Image Source="../../Resources/Sad_Cloud_96px.png" Width="96" Height="96" />
-                    <Label Content="Make this screen great again!" 
-                           FontWeight="DemiBold"
-                           Foreground="{StaticResource NoContentGrayColorBrush}"
-                           HorizontalAlignment="Center"
-                           FontSize="26"/>
-                </StackPanel>
+        <Image Source="../../Resources/Sad_Cloud_96px.png" Width="96" Height="96" />
+        <Label Content="Pojawią się nie zmyślam!"
+               FontWeight="DemiBold"
+               Foreground="{StaticResource NoContentGrayColorBrush}"
+               HorizontalAlignment="Center"
+               FontSize="26" />
+    </StackPanel>
 </UserControl>
