--- a/Projekt/GUI/UserControls/EndResultsControl.xaml
+++ b/Projekt/GUI/UserControls/EndResultsControl.xaml
@@ -4,13 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:design="clr-namespace:Projekt"
-             xmlns:design1="clr-namespace:Projekt.GUI.Design"
+             xmlns:local="clr-namespace:Projekt.GUI.UserControls"
              mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="WhiteSmoke" d:DataContext="{x:Static design1:EndResultsDesign.Instance}">
+             d:DesignHeight="450" d:DesignWidth="800" >
+
+    <Grid Background="WhiteSmoke" d:DataContext="{x:Static design:EndResultsDesign.Instance}" x:Name="MainContainer">
+      
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
-            <RowDefinition Height="8*" />
+            <RowDefinition Height="10*" />
 
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -24,8 +27,8 @@
             </Border.Effect>
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="10*" />
                     <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="70" />
                 </Grid.ColumnDefinitions>
                 <Label Content="{Binding Title}"
                        Background="CadetBlue" Foreground="WhiteSmoke"
@@ -37,12 +40,22 @@
                     Content="{StaticResource FontAwesomeEllipsisVerticalIcon}"
                     Foreground="White"
                     FontFamily="{StaticResource FontAwesome}"
-                    VerticalAlignment="Center"
-                    HorizontalAlignment="Center" />
+                    Command="{Binding ShowMenuCommand}"/>
             </Grid>
+         
         </Border>
 
-        <ContentPresenter Grid.Row="1" Content="{Binding ContentPresented}" />
+        <ContentPresenter Grid.Row="1" Content="{Binding ContentPresented}" >
+            <ContentPresenter.InputBindings>
+                <MouseBinding MouseAction="LeftClick" Command="{Binding ClickAwayCommand}"/>
+            </ContentPresenter.InputBindings>
+        </ContentPresenter>
+
+        <design:BasePopup Visibility="{Binding mViewModel.MenuVisibility, Converter={design:VisibilityBoolValueConverter}, RelativeSource={RelativeSource FindAncestor,AncestorType={x:Type local:EndResultsControl}}}" 
+                          Grid.Row="1" 
+                          VerticalAlignment="Top" HorizontalAlignment="Right" 
+                          Margin="10 0 10 0"
+                          DataContext="{Binding MenuPopupDataContext}"/>
 
 
     </Grid>
